переміщення між сторінками

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,12 @@
-<div class="login-form">
+<div>
     <h2>Login</h2>
-    <form (ngSubmit)="onLogin()" #loginForm="ngForm">
-        <div>
-            <label for="username">Username</label>
-            <input type="text" id="username" [(ngModel)]="loginModel.username" name="username" required>
-        </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" [(ngModel)]="loginModel.password" name="password" required>
-        </div>
-        <button type="submit" [disabled]="loginForm.invalid">Login</button>
+    <form (ngSubmit)="onLogin()">
+        <label for="username">Username:</label>
+        <input id="username" [(ngModel)]="loginModel.username" name="username" required />
+
+        <label for="password">Password:</label>
+        <input id="password" type="password" [(ngModel)]="loginModel.password" name="password" required />
+
+        <button type="submit">Login</button>
     </form>
 </div>
